syntax = "proto3";

option go_package = ".;grpcserver";

package errorr;

enum Category {
  Business = 0; // 业务错误，不可以通过重试解决
  System = 1; // 系统错误，不可以通过重试解决
  Retriable = 2;  // 可以通过重试解决的临时错误（如CAS）
};

message GError {
  string Code = 1;  // 文本错误码，如：ErrInvalidArgument
  string ModuleName = 2;   // 模块名，如：user
  string UserMessage = 3; // 用户可读的错误信息
  string DebugMessage = 4;  // 调试信息
  string StackTrace = 5; // 堆栈信息，一般不用给
  repeated GError CausedBy = 6; // 引起本错误的错误
  Category Category = 7; // 错误类型
};
